--- a/embedded_flipbooks/ex3.1_embed.Rmd
+++ b/embedded_flipbooks/ex3.1_embed.Rmd
@@ -48,10 +48,18 @@ employed_under_150K %>%
                      breaks=c(seq(from = 0,
                                   to = 100,
                                   by = 10))) +
-  scale_y_log10()
+  scale_y_log10() + 
+  theme_bw() + #ROTATE
+  theme_light() + #ROTATE
+  theme_gray() + #ROTATE
+  theme_void() + #ROTATE
+  theme_linedraw() + #ROTATE
+  theme_minimal() + #ROTATE
+  theme_classic() + #ROTATE
+  theme_dark() #ROTATE
 ```
 
-`r chunk_reveal(chunk_name = "the_chunk", break_type = "auto", ...)`
+`r chunk_reveal(chunk_name = "the_chunk", break_type = "rotate", ...)`
 
 
 
